[package]
name = "gaussian-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["Window"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
omit-default-module-path = true
